minor fixes and removed animation on contact form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <title>Portfolio</title>
+  <title>My Portfolio</title>
 </head>
 
 <body>
@@ -436,15 +436,17 @@
     <div id="contact" class="port-section">
       <div class="card card-body px-5 bg-dark-magenta text-white sticky-top">
         <h2>Contact</h2>
-        <p>Feel free to contact me anytime
-          <i class="fas fa-at text-warning"></i> hemantsonu20@gmail.com</p>
+        <p>Feel free to contact me anytime &ensp;
+          <i class="fas fa-envelope text-warning"></i>
+          <a href="mailto:hemantsonu20@gmail.com"> hemantsonu20@gmail.com</a>
+        </p>
       </div>
       <div class="card p-5">
         <div class="card-header">
           <h2>Get In Touch</h2>
           <!-- <p class="lead">Feel free to contact me anytime</p> -->
         </div>
-        <div class="card-body" data-aos="zoom-in" data-aos-offset="200" data-aos-easing="ease-out-cubic">
+        <div class="card-body">
           <form id="contact-form" onsubmit="sendMessage()">
             <div class="form-group">
               <div class="input-group input-group-lg">
