--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
               <h4 class="card-title">API Gateway</h4>
               <p class="card-text">Micro Services Architecture</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 An api gateway implementation using Zuul Reverse Proxy.
               </h6>
               <h6>
                 It also includes rest api doc auto gennearation using Swagger.
               </h6>
-              <div>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">spring boot</span>
                 <span class="badge badge-pill badge-secondary">swagger</span>
@@ -323,14 +323,14 @@
               <h4 class="card-title">JWT Cracker</h4>
               <p class="card-text">Multi-threaded JWT Cracker</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 A JWT token is encoded / decoded with a secret key.
               </h6>
               <h6>
                 If secret key is very simple, it can be cracked easily using brute force.
               </h6>
-              <div>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">jwt</span>
                 <span class="badge badge-pill badge-secondary">spring security</span>
@@ -346,14 +346,14 @@
               <h4 class="card-title">SIP Uri Parser</h4>
               <p class="card-text">Uri Parser using Antlr</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 A sip uri parser written with using a parser generator library antlr.
               </h6>
               <h6>
                 The library parses given sip uri and returns its individual components into a Java Class.
               </h6>
-              <div>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">sip</span>
                 <span class="badge badge-pill badge-secondary">antlr</span>
@@ -371,12 +371,12 @@
               <h4 class="card-title">Cric Score Updater</h4>
               <p class="card-text">Desktop Cricket Score App</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 A desktop java application which shows cricket score via a popup repeatedly.
               </h6>
 
-              <div>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">swing</span>
               </div>
@@ -391,12 +391,12 @@
               <h4 class="card-title">Cric Poll</h4>
               <p class="card-text">Desktop Cricket Score App</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 This app let you ask your friends opinion (Yes / No / Maybe) for any event such as cricket.
               </h6>
-              <a class="mb-3" href="https://cric-poll.appspot.com" target="_blank">https://cric-poll.appspot.com</a>
-              <div>
+              <a href="https://cric-poll.appspot.com" target="_blank">https://cric-poll.appspot.com</a>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">angular</span>
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">firebase</span>
@@ -412,11 +412,11 @@
               <h4 class="card-title">Json Viewer</h4>
               <p class="card-text">A desktop java application</p>
             </div>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h6>
                 A json viewer application with beautify / minify feature as well as it has file / text compare option.
               </h6>
-              <div>
+              <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
                 <span class="badge badge-pill badge-secondary">swing</span>
                 <span class="badge badge-pill badge-secondary">json</span>
