--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div class="col-md-8">
           <div class="d-flex flex-column">
-            <div class="p-5 bg-dark text-white">
+            <div class="p-4 p-md-5 bg-dark text-white">
               <div class="d-flex flex-column justify-content-between align-items-left">
-                <h1 class="display-4">Pratapi Hemant Patel</h1>
+                <h1 id="name-heading" class="display-4">Pratapi Hemant Patel</h1>
                 <div class="d-flex flex-row" id="social-icons">
 
                   <div class="px-1">
@@ -94,9 +94,9 @@
     <!-- HOME -->
     <div id="home" class="port-section">
 
-      <div class="card card-body px-5 bg-info text-white sticky-top">
+      <div class="card card-body px-5 py-3 bg-info text-white sticky-top">
         <h2>Welcome To My Page</h2>
-        <p>An experienced Full Stack Java Developer with 4+ years of experience in implementation and design of large scale
+        <p class="d-none d-md-block">An experienced Full Stack Java Developer with 4+ years of experience in implementation and design of large scale
           enterprise applications.
         </p>
       </div>
@@ -228,9 +228,9 @@
 
     <!-- RESUME -->
     <div id="resume" class="port-section">
-      <div class="card card-body px-5 bg-success text-white sticky-top">
+      <div class="card card-body px-5  py-3 bg-success text-white sticky-top">
         <h2>My Resume</h2>
-        <p>My work experience includes telecom and travel domains</p>
+        <p class="d-none d-md-block">My work experience includes telecom and travel domains</p>
       </div>
       <div class="card p-5">
         <div class="card-header border-0">
@@ -284,9 +284,9 @@
 
     <!-- WORK -->
     <div id="work" class="port-section">
-      <div class="card card-body px-5 bg-primary text-white sticky-top">
+      <div class="card card-body px-5  py-3 bg-primary text-white sticky-top">
         <h2>My Work</h2>
-        <p>Some of my open source contributions</p>
+        <p class="d-none d-md-block">Some of my open source contributions</p>
       </div>
       <div class="card p-5">
         <div class="card-header border-0">
@@ -434,11 +434,15 @@
 
     <!-- CONTACT -->
     <div id="contact" class="port-section">
-      <div class="card card-body px-5 bg-dark-magenta text-white sticky-top">
+      <div class="card card-body px-5  py-3 bg-dark-magenta text-white sticky-top">
         <h2>Contact</h2>
-        <p>Feel free to contact me anytime &ensp;
-          <i class="fas fa-envelope text-warning"></i>
-          <a href="mailto:hemantsonu20@gmail.com"> hemantsonu20@gmail.com</a>
+        <p class="d-none d-md-block">Feel free to contact me anytime &ensp;
+          <a href="mailto:hemantsonu20@gmail.com">
+            <i class="fas fa-envelope text-warning"></i> hemantsonu20@gmail.com</a>
+        </p>
+        <p class="d-block d-md-none">
+          <a href="mailto:hemantsonu20@gmail.com">
+            <i class="fas fa-envelope text-warning"></i> hemantsonu20@gmail.com</a>
         </p>
       </div>
       <div class="card p-5">
@@ -509,56 +513,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <script>
-
-      AOS.init({
-        duration: 1200,
-        //easing: 'ease-in-out'
-      });
-
-      $("#year").text(new Date().getFullYear());
-
-      $(".port-item").on('click', function (event) {
-        const target = $(this).data('target');
-        if (target !== "") {
-          event.preventDefault();
-
-          $('html, body').animate({
-            scrollTop: $(target).offset().top
-          }, 800, function () {
-
-            window.location.hash = target;
-          });
-        }
-      });
-
-      function sendMessage() {
-
-        const name = document.getElementById('name-input').value;
-        const message = document.getElementById('message-input').value;
-        const subject = 'Message from ' + name + ' via ' + encodeURI(window.location.host);
-
-        document.getElementById("contact-form").reset();
-
-        window.open('https://mail.google.com/mail/?view=cm&fs=1&to=hemantsonu20@gmail.com&su=' + subject + '&body=' + message, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');
-
-      }
-
-    // Smooth Scrolling
-    /*  $(function () {
-        $(window).scroll(function (e) {
-          $('.port-section').each(function () {
-            if ($(window).scrollTop() > $(this).offset().top) {
-              console.log(this.id + ' ' + $(window).scrollTop() + ' ' + $(this).offset().top);
-              window.location.hash = this.id;
-            }
-          });
-        });
-      }); */
-
-    </script>
-
+    <script src="js/app.js"></script>
 </body>
 
 </html>
