responsiveness / message href on mobile to mailto:

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="img/profile.jpg" alt="">
+          <img src="assets/img/profile.jpg" alt="">
         </div>
         <div class="col-md-8">
           <div class="d-flex flex-column">
@@ -94,14 +94,14 @@
     <!-- HOME -->
     <div id="home" class="port-section">
 
-      <div class="card card-body px-5 py-3 bg-info text-white sticky-top">
+      <div class="card card-body px-md-5 py-3 bg-info text-white sticky-top">
         <h2>Welcome To My Page</h2>
         <p class="d-none d-md-block">An experienced Full Stack Java Developer with 4+ years of experience in implementation and design of large scale
           enterprise applications.
         </p>
       </div>
 
-      <div class="card p-5">
+      <div class="card p-md-5">
 
         <div class="card-header">
           <h3>My Skills</h3>
@@ -228,11 +228,11 @@
 
     <!-- RESUME -->
     <div id="resume" class="port-section">
-      <div class="card card-body px-5  py-3 bg-success text-white sticky-top">
+      <div class="card card-body px-md-5  py-3 bg-success text-white sticky-top">
         <h2>My Resume</h2>
         <p class="d-none d-md-block">My work experience includes telecom and travel domains</p>
       </div>
-      <div class="card p-5">
+      <div class="card p-md-5">
         <div class="card-header border-0">
           <h2>Where Have I Worked?</h2>
           <!-- <p class="lead"></p> -->
@@ -284,17 +284,17 @@
 
     <!-- WORK -->
     <div id="work" class="port-section">
-      <div class="card card-body px-5  py-3 bg-primary text-white sticky-top">
+      <div class="card card-body px-md-5  py-3 bg-primary text-white sticky-top">
         <h2>My Work</h2>
         <p class="d-none d-md-block">Some of my open source contributions</p>
       </div>
-      <div class="card p-5">
+      <div class="card p-md-5">
         <div class="card-header border-0">
           <h2>What Have I Built?</h2>
           <!-- <p class="lead"></p> -->
         </div>
 
-        <div class="card-deck mb-5">
+        <div class="card-deck mb-3">
           <div class="card card-zoom" data-aos="flip-left" data-aos-offset="200" data-aos-easing="ease-out-cubic">
             <div class="card-header bg-primary text-white">
               <h4 class="card-title">API Gateway</h4>
@@ -305,7 +305,7 @@
                 An api gateway implementation using Zuul Reverse Proxy.
               </h6>
               <h6>
-                It also includes rest api doc auto gennearation using Swagger.
+                It also includes rest api doc auto generation using Swagger.
               </h6>
               <div class="mt-auto">
                 <span class="badge badge-pill badge-secondary">java</span>
@@ -434,7 +434,7 @@
 
     <!-- CONTACT -->
     <div id="contact" class="port-section">
-      <div class="card card-body px-5  py-3 bg-dark-magenta text-white sticky-top">
+      <div class="card card-body px-md-5  py-3 bg-dark-magenta text-white sticky-top">
         <h2>Contact</h2>
         <p class="d-none d-md-block">Feel free to contact me anytime &ensp;
           <a href="mailto:hemantsonu20@gmail.com">
@@ -445,7 +445,7 @@
             <i class="fas fa-envelope text-warning"></i> hemantsonu20@gmail.com</a>
         </p>
       </div>
-      <div class="card p-5">
+      <div class="card p-md-5">
         <div class="card-header">
           <h2>Get In Touch</h2>
           <!-- <p class="lead">Feel free to contact me anytime</p> -->
@@ -494,8 +494,10 @@
     </div>
 
 
+    <div class="p-2 p-sm-0 m-5" style="visibility: hidden"></div>
+
     <!-- FOOTER -->
-    <footer class="bg-dark text-white p-5">
+    <footer class="bg-dark text-white p-3 p-md-5">
       <div class="row">
         <div class="col-md-6">
           <a href="assets/pratapi_hemant_resume_200.pdf" target="_blank" class="btn btn-outline-light">
