--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Pratapi Hemant Patel's Portfolio">
+  <meta name="keywords" content="Pratapi,Hemant, Patel, Portfolio, Github">
+  <meta name="author" content="Pratapi Hemant Patel">
+
+  <meta property="og:title" content="My Portfolio">
+  <meta property="og:image" content="assets/img/profile.jpg">
+  <meta property="og:description" content="Pratapi Hemant Patel's Portfolio">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
