--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Pratapi Hemant Patel's Portfolio">
-  <meta name="keywords" content="Pratapi,Hemant, Patel, Portfolio, Github">
+  <meta name="keywords" content="Pratapi, Hemant, Patel, Portfolio, Github">
   <meta name="author" content="Pratapi Hemant Patel">
 
   <meta property="og:title" content="My Portfolio">
-  <meta property="og:image" content="assets/img/profile.jpg">
+  <meta property="og:image" content="https://hemantsonu20.github.io/assets/img/profile.jpg">
   <meta property="og:description" content="Pratapi Hemant Patel's Portfolio">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
