--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
+
   <meta name="description" content="Pratapi Hemant Patel's Portfolio">
   <meta name="keywords" content="Pratapi, Hemant, Patel, Portfolio, Github">
   <meta name="author" content="Pratapi Hemant Patel">
