--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>My Portfolio</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden">
 
   <div id="top-container" class="container-fluid">
     <header id="main-header">
@@ -93,12 +93,12 @@
                 <div class="port-item p-4 bg-dark-magenta" data-target="#contact">
                   <i class="fas fa-envelope fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Contact</span>
-                  </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </header>
 
     <!-- HOME -->
@@ -491,7 +491,7 @@
                     <i class="fas fa-pencil-alt"></i>
                   </span>
                 </div>
-                <textarea type="text" id="message-input" class="form-control" placeholder="Message" required></textarea>
+                <textarea id="message-input" class="form-control" placeholder="Message" required></textarea>
               </div>
             </div>
 
@@ -516,16 +516,16 @@
         </div>
       </div>
     </footer>
-    </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
