updated skill / exp

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <div class="card card-body px-md-5 py-3 bg-info text-white sticky-top">
         <h2>Welcome To My Page</h2>
-        <p class="d-none d-md-block">An experienced Full Stack Java Developer with 4+ years of experience in implementation and design of large scale
+        <p class="d-none d-md-block">An experienced Full Stack Java Developer with 5+ years of experience in implementation and design of large scale
           enterprise applications.
         </p>
       </div>
@@ -211,7 +211,7 @@
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
               </div>
 
-              <h4>Google Analytics</h4>
+              <h4>Jenkins</h4>
               <div class="progress mb-3 bg-light-grey">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
                 <span class="progress-bar-step"></span>
@@ -219,6 +219,16 @@
                 <span class="progress-bar-step"></span>
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
               </div>
+
+              <h4>Docker</h4>
+              <div class="progress mb-3 bg-light-grey">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
+                <span class="progress-bar-step"></span>
+                <div class="progress-bar bg-info" style="width: 20%;"></div>
+                <span class="progress-bar-step"></span>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
+              </div>
+
             </div>
           </div>
           <div class="row">
