updated work profile | image update

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <img src="assets/img/profile.jpg" alt="">
         </div>
         <div class="col-md-8">
-          <div class="d-flex flex-column">
-            <div class="p-4 p-md-5 bg-dark text-white">
-              <div class="d-flex flex-column justify-content-between align-items-left">
+          <div class="d-flex flex-column h-100">
+            <div class="p-4 p-md-5 bg-dark text-white d-flex align-items-center" style="flex-grow: 1;">
+              <div class="d-flex flex-column">
                 <h1 id="name-heading" class="display-4">Pratapi Hemant Patel</h1>
                 <div class="d-flex flex-row" id="social-icons">
 
@@ -188,10 +188,9 @@
                 <span class="progress-bar-step"></span>
                 <div class="progress-bar bg-info" style="width: 20%;"></div>
                 <span class="progress-bar-step"></span>
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 10%;"></div>
               </div>
 
-              <h4>Bootstrap</h4>
+              <h4>React</h4>
               <div class="progress mb-3 bg-light-grey">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
                 <span class="progress-bar-step"></span>
@@ -199,10 +198,9 @@
                 <span class="progress-bar-step"></span>
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
                 <span class="progress-bar-step"></span>
-                <div class="progress-bar bg-info" style="width: 20%;"></div>
               </div>
 
-              <h4>HTML / CSS / JavaScript</h4>
+              <h4>Node / JavaScript</h4>
               <div class="progress mb-3 bg-light-grey">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" style="width: 20%;"></div>
                 <span class="progress-bar-step"></span>
@@ -238,7 +236,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-left">
               <h4>Cloud</h4>
-              <p class="mb-3">Google Cloud, Google App Engine, Firebase, Cloud Foundry</p>
+              <p class="mb-3">AWS, Google Cloud, Google App Engine, Firebase, Cloud Foundry</p>
             </div>
           </div>
         </div>
@@ -261,27 +259,27 @@
 
           <div class="card card-zoom" data-aos="zoom-in">
             <div class="card-header bg-success text-white">
-              <h4 class="card-title">Yatra</h4>
+              <h4 class="card-title">Expedia</h4>
               <p class="card-text">Gurgaon, Haryana, India</p>
             </div>
             <div class="card-body">
-              <p>Senior Software Engineer</p>
+              <p>Full Stack Developer</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Nov 2017 to Present</h6>
+              <h6 class="text-muted">Java, Node, React, MongoDB</h6>
             </div>
           </div>
 
           <div class="card card-zoom" data-aos="zoom-in">
             <div class="card-header bg-success text-white">
-              <h4 class="card-title">GlobalLogic</h4>
-              <p class="card-text">Noida, Uttar Pradesh, India</p>
+              <h4 class="card-title">Yatra</h4>
+              <p class="card-text">Gurgaon, Haryana, India</p>
             </div>
             <div class="card-body">
-              <p>Senior Software Engineer</p>
+              <p>Full Stack Developer</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Nov 2016 to Oct 2017</h6>
+              <h6 class="text-muted">Java, Spring, Angular</h6>
             </div>
           </div>
 
@@ -291,10 +289,10 @@
               <p class="card-text">Gurgaon, Haryana, India</p>
             </div>
             <div class="card-body">
-              <p>Software Engineer</p>
+              <p>Java Developer</p>
             </div>
             <div class="card-footer">
-              <h6 class="text-muted">Oct 2014 to Oct 2016</h6>
+              <h6 class="text-muted">Java, Spring Boot, Cassandra</h6>
             </div>
           </div>
 
